--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>eScooter Tracking</title>
+  <title>eScooter Tracker Project</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -281,14 +281,14 @@ main.container {
       <div id="content">
 
         <!-- Topbar -->
-        <!-- <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+        <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
-          Sidebar Toggle (Topbar)
+          <!-- Sidebar Toggle (Topbar) -->
           <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
             <i class="fa fa-bars"></i>
           </button>
 
-          Topbar Search
+          <!-- Topbar Search -->
           <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
             <div class="input-group">
               <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
@@ -300,16 +300,16 @@ main.container {
             </div>
           </form>
 
-          Topbar Navbar
+          <!-- Topbar Navbar -->
           <ul class="navbar-nav ml-auto">
 
-            Nav Item - Search Dropdown (Visible Only XS)
+            <!-- Nav Item - Search Dropdown (Visible Only XS) -->
             <li class="nav-item dropdown no-arrow d-sm-none">
               <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-search fa-fw"></i>
               </a>
-              Dropdown - Messages
-              <div class="dropdown-menu dropdown-menu-right p-3 shadow animatedgrow-in" aria-labelledby="searchDropdown">
+              <!-- Dropdown - Messages -->
+              <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
                 <form class="form-inline mr-auto w-100 navbar-search">
                   <div class="input-group">
                     <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
@@ -323,17 +323,17 @@ main.container {
               </div>
             </li>
 
-            Nav Item - Alerts
+            <!-- Nav Item - Alerts -->
             <li class="nav-item dropdown no-arrow mx-1">
               <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-bell fa-fw"></i>
-                Counter - Alerts
+                <!-- Counter - Alerts -->
                 <span class="badge badge-danger badge-counter">3+</span>
               </a>
-              Dropdown - Alerts
-              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animatedgrow-in" aria-labelledby="alertsDropdown">
+              <!-- Dropdown - Alerts -->
+              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
                 <h6 class="dropdown-header">
-                  Alerts Center
+                  <!-- Alerts Center -->
                 </h6>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="mr-3">
@@ -372,17 +372,17 @@ main.container {
               </div>
             </li>
 
-            Nav Item - Messages
+            <!-- Nav Item - Messages -->
             <li class="nav-item dropdown no-arrow mx-1">
               <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fas fa-envelope fa-fw"></i>
-                Counter - Messages
+                <!-- Counter - Messages -->
                 <span class="badge badge-danger badge-counter">7</span>
               </a>
-              Dropdown - Messages
-              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animatedgrow-in" aria-labelledby="messagesDropdown">
+              <!-- Dropdown - Messages -->
+              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="messagesDropdown">
                 <h6 class="dropdown-header">
-                  Message Center
+                  <!-- Message Center -->
                 </h6>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                   <div class="dropdown-list-image mr-3">
@@ -430,14 +430,14 @@ main.container {
 
             <div class="topbar-divider d-none d-sm-block"></div>
 
-            Nav Item - User Information
+            <!-- Nav Item - User Information -->
             <li class="nav-item dropdown no-arrow">
               <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Mohd Yazid</span>
                 <img class="img-profile rounded-circle" src="https://images.unsplash.com/photo-1573126324222-6600c9c21274?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2249&q=80">
               </a>
-              Dropdown - User Information
-              <div class="dropdown-menu dropdown-menu-right shadow animatedgrow-in" aria-labelledby="userDropdown">
+              <!-- Dropdown - User Information -->
+              <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                 <a class="dropdown-item" href="#">
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                   Profile
@@ -460,7 +460,7 @@ main.container {
 
           </ul>
 
-        </nav> -->
+        </nav>
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
@@ -544,7 +544,7 @@ main.container {
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Scooter 1 User</div>
+                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Scooter 1 User UUID</div>
                       <h4 class="small font-weight-bold">Yazid<span id="s1-usage-timer" class="float-right">0%</span></h4>
 
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Scooter 1 Usage Duration</div>
@@ -564,8 +564,8 @@ main.container {
                 <div class="card-body">
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
-                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Scooter 2 User</div>
-                      <h4 class="small font-weight-bold">Farah<span id="s2-usage-timer" class="float-right">0%</span></h4>
+                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Scooter 2 User UUID</div>
+                      <h4 class="small font-weight-bold">Fazila Elot<span id="s2-usage-timer" class="float-right">0%</span></h4>
 
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Scooter 2 Usage Duration</div>
                       <h4 class="small font-weight-bold">000<span id="s2-usage-timer" class="float-right">0%</span></h4>
@@ -813,17 +813,16 @@ main.container {
             <div class="col-lg-6 mb-4">
 
               <!-- Project Card Example -->
-              <div class="card shadow mb-4">
 
-                <div class="card-body">
+                <!-- <div class="card-body"> -->
 
-                  <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <!-- <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                     <h6 class="m-0 font-weight-bold text-primary">Revenue Sources</h6>
                     <div class="dropdown no-arrow">
                       <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
                       </a>
-                      <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
+                      <div class="dropdown-menu dropdown-menu-right shadow animatedfade-in" aria-labelledby="dropdownMenuLink">
                         <div class="dropdown-header">Dropdown Header:</div>
                         <a class="dropdown-item" href="#">Action</a>
                         <a class="dropdown-item" href="#">Another action</a>
@@ -831,10 +830,10 @@ main.container {
                         <a class="dropdown-item" href="#">Something else here</a>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
 
                   <!-- </div> -->
-                  <div class="mt-4 text-center small">
+                  <!-- <div class="mt-4 text-center small">
                     <span class="mr-2">
                       <i class="fas fa-circle text-primary"></i> Direct
                     </span>
@@ -844,14 +843,13 @@ main.container {
                     <span class="mr-2">
                       <i class="fas fa-circle text-info"></i> Referral
                     </span>
-                </div>
-              </div>
-            </div>
+                </div> -->
+              <!-- </div> -->
           </div>
         </div>
 
               <!-- Color System -->
-              <div class="row">
+              <!-- <div class="row">
                 <div class="col-lg-6 mb-4">
                   <div class="card bg-primary text-white shadow">
                     <div class="card-body">
@@ -900,29 +898,29 @@ main.container {
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
             </div>
 
-            <div class="col-lg-6 mb-4">
+            <!-- <div class="col-lg-6 mb-4"> -->
 
               <!-- Illustrations -->
-              <div class="card shadow mb-4">
+              <!-- <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">eScooter GPS Tracking</h6>
                 </div>
                 <div class="card-body">
                   <div class="text-center">
                     <canvas id="myAreaChart"></canvas>
-                    <!-- <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="img/undraw_scooter_aia8.svg" alt=""> -->
+                    <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src="img/undraw_scooter_aia8.svg" alt="">
                   </div>
                   <p>Add some quality, svg illustrations to your project courtesy of <a target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a constantly updated collection of beautiful svg images that you can use completely free and without attribution!</p>
                   <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Approach -->
-              <div class="card shadow mb-4">
+              <!-- <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
                 </div>
@@ -930,9 +928,9 @@ main.container {
                   <p>SB Admin 2 makes extensive use of Bootstrap 4 utility classes in order to reduce CSS bloat and poor page performance. Custom CSS classes are used to create custom components and custom utility classes.</p>
                   <p class="mb-0">Before working with this theme, you should become familiar with the Bootstrap framework, especially the utility classes.</p>
                 </div>
-              </div>
+              </div> -->
 
-            </div>
+            <!-- </div> -->
           </div>
 
         </div>
